upload 26-08-2020, working on-> footer bug, style adjustments

--- a/src/langs/lang-pack-ita.json
+++ b/src/langs/lang-pack-ita.json
@@ -262,7 +262,7 @@
           "voce":"contatti",
           "images":[],
           "subTitle":"BB s.p.A. Contatti aziendali",
-          "mainContent":"<p id='general-contat'> per qualsiasi domanda, rivolgersi a <br><strong>Nome Cognome <br> mail@mail.it <br> 000 000 000 000</strong> </p> <ul><li><h4>Veronica Rogialli</h4><h5>Ufficio Stampa</h5><p>v.rogialli@bbspa.eu<br></p></li><li><h4>Nome Cognome</h4><h5>Mansione</h5><p><i>000 000 000</i><br> mail@mail.it</p></li><li><h4>Nome Cognome</h4><h5>Mansione</h5><p><i>000 000 000</i><br> mail@mail.it</p></li><li><h4>Nome Cognome</h4><h5>Mansione</h5><p><i>000 000 000</i><br> mail@mail.it</p></li><li><h4>Nome Cognome</h4><h5>Mansione</h5><p><i>000 000 000</i><br> mail@mail.it</p></li>",
+          "mainContent":"<p id='general-contact'><span>bb@bbspa.eu <br>Tel 055 8874644<br> Fax 055 8826570</span><span>BB S.p.A.<br>Via Petrarca, 158<br>50041 Calenzano (FI)</span></p> <ul><li><strong>Mansione | </strong>Nome Cognome<br><u>email@email.it</u></li></ul>",
           "footer":"",
           "id":"1865588427095"
        },
