27-08-2020, inserito sistema a span anche nelle pagine di terzo livello, esempio di funzionamento con la pagina campionatura(lang-pack-ita)

--- a/src/langs/lang-pack-ita.json
+++ b/src/langs/lang-pack-ita.json
@@ -64,7 +64,7 @@
        {
           "voce":"Campionatura",
           "subTitle":"",
-          "mainContent":"Il percorso dell’accessorio nasce(inizia) nel reparto campionatura luogo dove l’idea del cliente prende forma, dove si elaborano <strong>soluzioni costruttive innovative e moderne</strong>, avvalendosi, oltre alle attrezzature tradizionali, anche della <strong>prototipazione rapida</strong>. Fondamentale la competenza e l'esperienza dei tecnici; qui la <strong>manualità e l'artigianalità</strong> sono alla base della realizzazione dell’accessorio stesso.",
+          "mainContent":"<span>Il percorso dell’accessorio nasce(inizia) nel reparto campionatura luogo dove l’idea del cliente prende forma, dove si elaborano <strong>soluzioni costruttive innovative e moderne</strong>,</span><span> avvalendosi, oltre alle attrezzature tradizionali, anche della <strong>prototipazione rapida</strong>. Fondamentale la competenza e l'esperienza dei tecnici; qui la <strong>manualità e l'artigianalità</strong> sono alla base della realizzazione dell’accessorio stesso.</span>",
           "footer":"",
           "images":[],
           "id":"385186228662"
