28-08-2020, aggiunta pagina certificazioni in il nostro operare

--- a/src/langs/lang-pack-ita.json
+++ b/src/langs/lang-pack-ita.json
@@ -231,15 +231,20 @@
        },
        {
           "voce":"BB per l'ambiente",
-          "subTitle":"ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.",
-          "mainContent":"ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.",
-          "footer":"ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.ITALorem ipsum dolor sit amet, consectetur adipiscing elit. Sed convallis lacus et justo vehicula consectetur. In id lorem dui. Donec luctus a turpis eget dapibus.",
-          "images":[
-             "img/placeholder1.jpg",
-             "img/placeholder2.png"
-          ],
+          "subTitle":"",
+          "mainContent":"<span>BB S.p.A. ha sempre creduto alla necessità di <strong>innovazione dell’industria</strong>, e sta già portando avanti tematiche importanti quali la <strong>responsabilità sociale d’impresa</strong> e le <strong>tematiche ambientali</strong>.<br>Negli ultimi anni si è accentuata in maniera esponenziale la consapevolezza dell’impatto che ogni attività umana ha sull’ambiente. Il tema della <strong>sostenibilità delle imprese</strong> è destinato a diventare una tematica centrale nella definizione degli obiettivi strategici per le aziende.<br>In quest’ottica BB ha pionieristicamente studiato la possibilità di utilizzare <strong>bioplastiche compostabili al 100%</strong> per i prodotti floccati o di termoformatura, ottenendo con successo un prodotto biodegradabile e compostabile, rispettoso dell’ambiente, che l’azienda produce e utilizza come packaging.<br>Nel 2015 BB ha ottenuto un <strong>importante riconoscimento dal CONAI</strong> (Consorzio Nazionale Imballaggi) come azienda che ha sviluppato una soluzione di packaging innovativa e sostenibile partecipando al progetto di prevenzione <i>«Valorizzare la sostenibilità ambientale degli imballaggi»</i><br>BB s’impegna a ridurre i propri consumi, su cui effettua una costante attività di monitoraggio, in particolare quelli legati al parco macchine (industria 4.0), all’utilizzo di acqua, energia elettrica e al condizionamento ambienti, cercando di implementare soluzioni a minor impatto in termini ambientali e di costi sostenuti.<br>Alcuni esempi per la <strong>riduzione della Carbon Footprint</strong>:<ol type='1'><li>Parco auto ecologico;</li><li>Progressiva sostituzione delle illuminazioni tradizionali con illuminazioni led in tutti gli stabilimenti;</li><li>Recupero del calore dissipato dalle macchine per condizionamento ambienti;</li><li>Acquisto energia proveniente da fonti rinnovabili; </li><li>Utilizzo packaging termoformato compostabile;  </li><li>Utilizzo di carta FSC e ECF;</li><li>Utilizzo di kit per caffè compostabile;</li><li>Dispenser di acqua per diminuire il consumo di plastica in bottiglia;</li></ol><br>Un altro obiettivo è legato al <strong>monitoraggio ed al coinvolgimento della supply chain</strong>, ovvero mirato a far sì che tutti i fornitori di BB si conformino agli standard etici ed ambientali, di uso di chemicals, di sicurezza, tracciabilità.</span><span></span>",
+          "footer":"",
+          "images":[],
           "id":"8225992546837"
        },
+       {
+         "voce":"Certificazioni",
+         "subTitle":"",
+         "mainContent":"<span>BB Spa a coronamento degli sforzi profusi per lo sviluppo in ambito tecnologico, produttivo e etico, si è vista riconoscere tre importanti <strong>certificazioni</strong>, tradotte poi in standard applicativi.<br>Con l’applicazione dello standard <strong>SA8000</strong>, BB Spa dichiara di voler rispettare le regole sull’etica del lavoro definite dalle più importanti organizzazioni mondiali per la tutela dei diritti umani e del lavoro, con la <strong>ISO 14001</strong> si impegna a minimizzare l'impatto ambientale dei propri sistemi produttivi e con la <strong>ISO 9001</strong> a garantire qualità dell’organizzazione e dei processi aziendali.</span><span></span>",
+         "footer":"",
+         "images":[],
+         "id":"1225932546637"
+      },
        {
           "voce":"contatti",
           "images":[],
@@ -480,9 +485,15 @@
              {
                 "voce":"BB per l’ambiente",
                 "contenuti":[
- 
+                  
                 ]
-             }
+             },
+             {
+               "voce":"Certificazioni",
+               "contenuti":[
+
+               ]
+            }
           ]
        }
     ],
