1/9/2020, gestione da css dei video delle pagine di terzo livello

--- a/src/langs/lang-pack-ita.json
+++ b/src/langs/lang-pack-ita.json
@@ -64,7 +64,7 @@
        {
           "voce":"Campionatura",
           "subTitle":"",
-          "mainContent":"<span> Il percorso dell’accessorio nasce nel reparto campionatura luogo dove l’idea del cliente prende forma, dove si elaborano <strong>soluzioni costruttive innovative e moderne</strong>, avvalendosi, oltre alle attrezzature tradizionali, anche della <strong>prototipazione rapida</strong>. <br><br>Fondamentale la competenza e l'esperienza dei tecnici; qui la <strong>manualità e l'artigianalità</strong> sono alla base della realizzazione dell’accessorio stesso.</span><span> <video style='top: -1em;left: -6em;width: 129%;' autoplay loop muted> <source src='img/CAMPIONATURA-BB.mp4' type='video/mp4'/> </video></span>",
+          "mainContent":"<span> Il percorso dell’accessorio nasce nel reparto campionatura luogo dove l’idea del cliente prende forma, dove si elaborano <strong>soluzioni costruttive innovative e moderne</strong>, avvalendosi, oltre alle attrezzature tradizionali, anche della <strong>prototipazione rapida</strong>. <br><br>Fondamentale la competenza e l'esperienza dei tecnici; qui la <strong>manualità e l'artigianalità</strong> sono alla base della realizzazione dell’accessorio stesso.</span><span> <video autoplay loop muted> <source src='img/CAMPIONATURA-BB.mp4' type='video/mp4'/> </video></span>",
           "footer":"",
           "images":[],
           "id":"385186228662"
@@ -72,7 +72,7 @@
        {
           "voce":"Industrializzazione",
           "subTitle":"",
-          "mainContent":"<span> Validato il prototipo, il reparto industrializzazione perfeziona l’articolo per la realizzazione su larga scala, <strong>ottimizzando costi e tempistiche</strong>. <br><br>Si tratta di un centro di competenza fortemente orientato ai core business aziendali e costituisce il fondamentale <strong>anello di congiunzione tra</strong> le aree tecnica di<strong> progettazione e </strong>quella di <strong>produzione</strong>.</span><span> <video style='left: -1em;top: -1em;width: 119%;' autoplay loop muted> <source src='img/INDUSTRIALIZZAZIONE-BB.mp4' type='video/mp4'/> </video></span>",
+          "mainContent":"<span> Validato il prototipo, il reparto industrializzazione perfeziona l’articolo per la realizzazione su larga scala, <strong>ottimizzando costi e tempistiche</strong>. <br><br>Si tratta di un centro di competenza fortemente orientato ai core business aziendali e costituisce il fondamentale <strong>anello di congiunzione tra</strong> le aree tecnica di<strong> progettazione e </strong>quella di <strong>produzione</strong>.</span><span> <video autoplay loop muted> <source src='img/INDUSTRIALIZZAZIONE-BB.mp4' type='video/mp4'/> </video></span>",
           "footer":"",
           "images":[],
           "id":"1292265386304"
@@ -96,7 +96,7 @@
        {
           "voce":"Lavorazioni Meccaniche",
           "subTitle":"",
-          "mainContent":"<span> Il reparto lavorazioni meccaniche è costituto da <strong>torni e da centri di lavoro a controllo numerico</strong>, alcuni particolarmente indicati per le lavorazioni di incisione, altri più adatti alla produzione in serie.<br><br>Inoltre dispone di un reparto attrezzato con <strong>macchinari per il taglio, l’incisione</strong> e la saldatura <strong>laser</strong>.</span><span> <video style='left: -2em;top: 0em;width: 114%;' autoplay loop muted> <source src='img/LAV-MEC-BB.mp4' type='video/mp4'/> </video></span>",
+          "mainContent":"<span> Il reparto lavorazioni meccaniche è costituto da <strong>torni e da centri di lavoro a controllo numerico</strong>, alcuni particolarmente indicati per le lavorazioni di incisione, altri più adatti alla produzione in serie.<br><br>Inoltre dispone di un reparto attrezzato con <strong>macchinari per il taglio, l’incisione</strong> e la saldatura <strong>laser</strong>.</span><span> <video autoplay loop muted> <source src='img/LAV-MEC-BB.mp4' type='video/mp4'/> </video></span>",
           "footer":"",
           "images":[],
           "id":"9292649936642"
@@ -104,7 +104,7 @@
        {
           "voce":"Saldatura",
           "subTitle":"",
-          "mainContent":"<span> Il reparto saldatura è costituito da <strong>20 moderne postazioni di lavoro</strong>, un <strong>forno rotativo continuo</strong> a controllo elettronico, una <strong>fresa</strong> dedicata per la realizzazione di piazzature grafitiche per saldatura. <br><br>Le macchine, insieme al personale specializzato, permettono al reparto di rispondere a qualsiasi esigenza produttiva e qualitativa.</span><span> <video style='left: -3em;top: -1em;width: 120%;' autoplay loop muted> <source src='img/SALDATURA-BB.mp4' type='video/mp4'/> </video></span>",
+          "mainContent":"<span> Il reparto saldatura è costituito da <strong>20 moderne postazioni di lavoro</strong>, un <strong>forno rotativo continuo</strong> a controllo elettronico, una <strong>fresa</strong> dedicata per la realizzazione di piazzature grafitiche per saldatura. <br><br>Le macchine, insieme al personale specializzato, permettono al reparto di rispondere a qualsiasi esigenza produttiva e qualitativa.</span><span> <video autoplay loop muted> <source src='img/SALDATURA-BB.mp4' type='video/mp4'/> </video></span>",
           "footer":"",
           "images":[],
           "id":"5736766581662"
@@ -112,7 +112,7 @@
        {
           "voce":"Smalteria",
           "subTitle":"",
-          "mainContent":"<span> La smalteria BB è in grado di effettuare <strong>smaltature su superfici difficili</strong> guidando il cliente verso le scelte migliori.<br><br>Il personale qualificato del reparto cura anche il <strong>montaggio a mano</strong> di <strong>strass e pietre dure</strong> e realizza anche <strong>forme in cera</strong> per la realizzazione di manufatti con processo di <strong>fusione a cera persa</strong>, partendo dal primo prototipo realizzato interamente a mano da personale qualificato.</span><span> <video style='left: -1em;top: -1em;width: 118%;' autoplay loop muted> <source src='img/SMALTERIA-BB.mp4' type='video/mp4'/> </video></span>",
+          "mainContent":"<span> La smalteria BB è in grado di effettuare <strong>smaltature su superfici difficili</strong> guidando il cliente verso le scelte migliori.<br><br>Il personale qualificato del reparto cura anche il <strong>montaggio a mano</strong> di <strong>strass e pietre dure</strong> e realizza anche <strong>forme in cera</strong> per la realizzazione di manufatti con processo di <strong>fusione a cera persa</strong>, partendo dal primo prototipo realizzato interamente a mano da personale qualificato.</span><span> <video autoplay loop muted> <source src='img/SMALTERIA-BB.mp4' type='video/mp4'/> </video></span>",
           "footer":"",
           "images":[],
           "id":"7919489898885"
@@ -120,7 +120,7 @@
        {
           "voce":"Galvanica",
           "subTitle":"",
-          "mainContent":"<span> BB dispone anche di un reparto galvanica moderno e all’avanguardia. La collaborazione interna con <strong>laboratori di ricerca chimico-fisica</strong> permette di studiare <strong>finiture innovative</strong> e di rispondere a qualsiasi esigenza del cliente.<br><br>I reparti interni di <strong>vibro-finitura</strong> e <strong>pulimentatura</strong>, consentono di gestire e ottimizzare un processo dedicato come la <strong>elettrodeposizione galvanica</strong> rendendolo industrialmente efficiente e, al contempo, preservando standard qualitativi elevati.</span><span> <video style='left: -1em;top: -1em;width: 118%;' autoplay loop muted> <source src='img/GALVANICA-BB.mp4' type='video/mp4'/> </video></span>",
+          "mainContent":"<span> BB dispone anche di un reparto galvanica moderno e all’avanguardia. La collaborazione interna con <strong>laboratori di ricerca chimico-fisica</strong> permette di studiare <strong>finiture innovative</strong> e di rispondere a qualsiasi esigenza del cliente.<br><br>I reparti interni di <strong>vibro-finitura</strong> e <strong>pulimentatura</strong>, consentono di gestire e ottimizzare un processo dedicato come la <strong>elettrodeposizione galvanica</strong> rendendolo industrialmente efficiente e, al contempo, preservando standard qualitativi elevati.</span><span> <video autoplay loop muted> <source src='img/GALVANICA-BB.mp4' type='video/mp4'/> </video></span>",
           "footer":"",
           "images":[],
           "id":"8087288243882"
@@ -128,7 +128,7 @@
        {
           "voce":"Montaggio",
           "subTitle":"",
-          "mainContent":"<span> Il reparto montaggio è in grado di eseguire l’<strong>assemblaggio attento e curato</strong> di componenti in finitura preziosa, garantendo la <strong>funzionalità di meccanismi</strong> anche complessi e, allo stesso tempo, preservando l’estetica del prodotto.</span><span> <video style='left: -1em;top: -1em;width: 121%;' autoplay loop muted> <source src='img/MONTAGGIO-BB.mp4' type='video/mp4'/> </video></span>",
+          "mainContent":"<span> Il reparto montaggio è in grado di eseguire l’<strong>assemblaggio attento e curato</strong> di componenti in finitura preziosa, garantendo la <strong>funzionalità di meccanismi</strong> anche complessi e, allo stesso tempo, preservando l’estetica del prodotto.</span><span> <video autoplay loop muted> <source src='img/MONTAGGIO-BB.mp4' type='video/mp4'/> </video></span>",
           "footer":"",
           "images":[],
           "id":"8087288243882"
@@ -136,7 +136,7 @@
        {
           "voce":"Termoformatura",
           "subTitle":"",
-          "mainContent":"<span> Il viaggio dell’accessorio si conclude nel <strong>reparto confezionamento</strong>, dove il prodotto viene accuratamente imballato nel <strong>plateau ecologico brevettato da BB</strong> o secondo le <strong>specifiche del cliente</strong>.</span><span> <video autoplay style='left: -1em;top: -1em;width: 124%;' loop muted> <source src='img/CONFEZIONAMENTO-BB.mp4' type='video/mp4'/> </video></span>",
+          "mainContent":"<span> Il viaggio dell’accessorio si conclude nel <strong>reparto confezionamento</strong>, dove il prodotto viene accuratamente imballato nel <strong>plateau ecologico brevettato da BB</strong> o secondo le <strong>specifiche del cliente</strong>.</span><span> <video autoplay loop muted> <source src='img/CONFEZIONAMENTO-BB.mp4' type='video/mp4'/> </video></span>",
           "footer":"",
           "images":[],
           "id":"1219334177102"
